syntax = "proto3";

package grpc_example;

import "github.com/wanghran/learning_golang/api/protobuf-spec/grpc_example.proto";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello(HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest { string name = 1; }

// The response message containing the greetings
message HelloReply { string message = 1; }